@@ -1,0 +1,9 @@
+/**
+ * Package containing support classes for processing Pulsar messages.
+ */
+@NonNullApi
+@NonNullFields
+package org.springframework.pulsar.reactive.support;
+
+import org.springframework.lang.NonNullApi;
+import org.springframework.lang.NonNullFields;
