@@ -1,0 +1,11 @@
+/**
+ * Package containing convenience utilities for testing Spring for Apache Pulsar
+ * applications.
+ * @since 1.1.0
+ */
+@NonNullApi
+@NonNullFields
+package org.springframework.pulsar.test.support;
+
+import org.springframework.lang.NonNullApi;
+import org.springframework.lang.NonNullFields;
